force-app/main/default/objects/OrderItem/fields/Disc_Type__c.field-meta.xml
<CustomField>
    <fullName>Disc_Type__c</fullName>
    <label>Disc_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amount</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>