force-app/main/default/objects/OrderItem/fields/Pending_Quantity1__c.field-meta.xml
<CustomField>
    <fullName>Pending_Quantity1__c</fullName>
    <formula>Quantity - BLANKVALUE(Delivered_Quantity__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>