force-app/main/default/objects/OrderItem/fields/Pending_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Pending_Quantity__c</fullName>
    <label>Pending Quantity.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>