force-app/main/default/objects/OrderItem/fields/Price_to_SAP__c.field-meta.xml
<CustomField>
    <fullName>Price_to_SAP__c</fullName>
    <formula>( UnitPrice * Quantity ) / (1 + (Tax_Percentage__c / 100))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price_to_SAP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>