force-app/main/default/objects/OrderItem/fields/Sqmtr__c.field-meta.xml
<CustomField>
    <fullName>Sqmtr__c</fullName>
    <formula>IF(
    AND(
         ISPICKVAL(Product2.Product_Category__c, &quot;STONE&quot;),
        NOT(ISBLANK( Quantity ))
    ),
    ROUND(Quantity * 0.092903, 2),
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sqmtr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>