force-app/main/default/objects/OrderItem/fields/UOM_Price_without_tax_and_after_disc__c.field-meta.xml
<CustomField>
    <fullName>UOM_Price_without_tax_and_after_disc__c</fullName>
    <label>UOM Price without tax and after discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>